--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "question-forum-client",
-  "homepage": "https://github.com/Kerah-Jones/qestion-forum-client",
+  "homepage": "https://kerah-jones.github.io/qestion-forum-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
